translated the pricing plan section

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -52,5 +52,6 @@
   "insuranceServicesDescription4": "Provides coverage for your vehicles against damages caused by accidents, theft, vandalism, or natural disasters",
 
   "insuranceServicesHeading5": "corporate protection",
-  "insuranceServicesDescription5": "Provides comprehensive coverage against losses in corporate organizations, companies, individuals shares and so on"
+  "insuranceServicesDescription5": "Provides comprehensive coverage against losses in corporate organizations, companies, individuals shares and so on",
+  "choosePlan": "Choose Plan"
 }
