--- a/src/translation/pt.json
+++ b/src/translation/pt.json
@@ -52,5 +52,6 @@
   "insuranceServicesDescription4": "Oferece cobertura para seus veículos contra danos causados ​​por acidentes, roubo, vandalismo ou desastres naturais",
 
   "insuranceServicesHeading5": "proteção corporativa",
-  "insuranceServicesDescription5": "Fornece cobertura abrangente contra perdas em organizações corporativas, empresas, ações de indivíduos e assim por diante"
+  "insuranceServicesDescription5": "Fornece cobertura abrangente contra perdas em organizações corporativas, empresas, ações de indivíduos e assim por diante",
+  "choosePlan": "Escolha o plano"
 }
