--- a/src/translation/pt.json
+++ b/src/translation/pt.json
@@ -53,5 +53,43 @@
 
   "insuranceServicesHeading5": "proteção corporativa",
   "insuranceServicesDescription5": "Fornece cobertura abrangente contra perdas em organizações corporativas, empresas, ações de indivíduos e assim por diante",
-  "choosePlan": "Escolha o plano"
+  "choosePlan": "Escolha o plano",
+
+  "testimonialsHeader1": "Por que confiar em nós?",
+  "testimonialsParagraph1": "Já ajudamos mais de meio milhar de clientes a proteger suas vidas e bens em todo o mundo, proporcionando 100% de satisfação",
+  "testimonialClientText": "titular de seguro de vida @ CCIC-Groups",
+
+  "testimonialsHeader2": "Isto é o que nossos clientes têm a dizer",
+  "testimonialsParagraph2": "Com CCIC-Groups, nossa equipe dedicada está sempre aqui para atendê-lo, fornecendo suporte personalizado em cada etapa do processo",
+
+  "client1name": "",
+  "client2name": "",
+  "client3name": "",
+  "client4name": "",
+  "client5name": "",
+
+  "client1TestimonialDesc": "O CCIC-Groups facilitou muito o seguro, orientando-me durante o processo e garantindo uma cobertura abrangente para minha família",
+  "client2TestimonialDesc": "Anos com Grupos CCIC, nunca decepcionados. Dedicação incomparável à satisfação do cliente e à busca das soluções de seguros perfeitas",
+  "client3TestimonialDesc": "Recentemente, registrei uma reclamação junto ao CCIC-Groups e fiquei impressionado com sua eficiência e assistência imediata durante todo o processo simples.",
+  "client4TestimonialDesc": "O CCIC-Groups realmente se preocupa com seus clientes e vai além para garantir sua satisfação. Não tenho nada além de experiências positivas com eles",
+  "client5TestimonialDesc": "",
+
+  "footerLinkHeader1": "Links Rápidos",
+  "footerLinkHeader2": "Característicos",
+  "footerLinkHeader3": "Entrar em contato",
+
+  "footer1linkParagraph1": "Depoimentos",
+  "footer1linkParagraph2": "Serviços",
+  "footer1linkParagraph3": "Nosso time",
+
+  "footer2linkParagraph1": "Reembolso legal garantido",
+  "footer2linkParagraph2": "Análise do usuário",
+  "footer2linkParagraph3": "Suporte Ilimitado",
+  "footer2linkParagraph4": "Satisfação do Cliente",
+
+  "footer3linkParagraph1": "+1 252-756-9956 ( Atualmente indisponivel )",
+  "footer3linkParagraph2": "ccis-groups@hotmail.com",
+  "footer3linkParagraph3": "359 Manchester St A Greenville, NC 27834, United States",
+
+  "footerRighReserved": "CCIC Todos os direitos reservados"
 }
