--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -53,5 +53,43 @@
 
   "insuranceServicesHeading5": "protección corporativa",
   "insuranceServicesDescription5": "Fornece cobertura abragente contra personas en organizaciones corporativas, empresas, acciones de individuos y personas por diante",
-  "choosePlan": "Elige Plan"
+  "choosePlan": "Elige Plan",
+
+  "testimonialsHeader1": "¿Por qué confiar en nosotras?",
+  "testimonialsParagraph1": "Hemos ayudado a más de medio millar de clientes a proteger sus vidas y sus bienes, en todo el mundo, brindándoles un 100% de satisfacción.",
+  "testimonialClientText": "titular de seguro de vida @ CCIC-Groups",
+
+  "testimonialsHeader2": "Esto es lo que nuestros clientes tienen que decir.",
+  "testimonialsParagraph2": "Con CCIC-Groups, nuestro equipo dedicado siempre está aquí para ayudarlo, brindándole soporte personalizado en cada paso del camino.",
+
+  "client1name": "",
+  "client2name": "",
+  "client3name": "",
+  "client4name": "",
+  "client5name": "",
+
+  "client1TestimonialDesc": "CCIC-Groups hizo que el seguro fuera muy sencillo, guiándome a través del proceso y asegurando una cobertura integral para mi familia.",
+  "client2TestimonialDesc": "Years with CCIC-Groups, never disappointed. Unmatched dedication to customer satisfaction and finding the perfect insurance solutions",
+  "client3TestimonialDesc": "Recientemente presenté un reclamo ante CCIC-Groups y quedé impresionado por su eficiencia y pronta asistencia durante todo el sencillo proceso.",
+  "client4TestimonialDesc": "CCIC-Groups realmente se preocupa por sus clientes y va más allá para garantizar su satisfacción. No tengo más que experiencias positivas con ellos.",
+  "client5TestimonialDesc": "",
+
+  "footerLinkHeader1": "Enlaces rápidos",
+  "footerLinkHeader2": "Características",
+  "footerLinkHeader3": "Ponerse en contacto",
+
+  "footer1linkParagraph1": "Testimonios",
+  "footer1linkParagraph2": "Servicios",
+  "footer1linkParagraph3": "Nuestro equipo",
+
+  "footer2linkParagraph1": "Reembolso legal asegurado",
+  "footer2linkParagraph2": "Análisis de usuario",
+  "footer2linkParagraph3": "Soporte ilimitado",
+  "footer2linkParagraph4": "Satisfacción del cliente",
+
+  "footer3linkParagraph1": "+1 252-756-9956 ( actualmente no disponible )",
+  "footer3linkParagraph2": "ccis-groups@hotmail.com",
+  "footer3linkParagraph3": "359 Manchester St A Greenville, NC 27834, United States",
+
+  "footerRighReserved": "CCIC Todos los derechos reservados."
 }
