worked on adding country flags

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -51,7 +51,7 @@
   "insuranceServicesHeading4": "Auto Protection",
   "insuranceServicesDescription4": "Provides coverage for your vehicles against damages caused by accidents, theft, vandalism, or natural disasters",
 
-  "insuranceServicesHeading5": "corporate protection",
+  "insuranceServicesHeading5": "Corporate Protection",
   "insuranceServicesDescription5": "Provides comprehensive coverage against losses in corporate organizations, companies, individuals shares and so on",
   "choosePlan": "Choose Plan",
 
@@ -88,7 +88,7 @@
   "footer2linkParagraph4": "Client Satisfaction",
 
   "footer3linkParagraph1": "+1 252-756-9956 ( currently unavailable )",
-  "footer3inkParagraph2": "ccis-groups@hotmail.com",
+  "footer3linkParagraph2": "ccis-groups@hotmail.com",
   "footer3linkParagraph3": "359 Manchester St A Greenville, NC 27834, United States",
 
   "footerRighReserved": "CCIC All Rights Reserved."
