--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -51,7 +51,7 @@
   "insuranceServicesHeading4": "Protección automática",
   "insuranceServicesDescription4": "Proporciona cobertura para sus vehículos contra daños causados ​​por accidentes, robo, vandalismo o desastres naturales.",
 
-  "insuranceServicesHeading5": "protección corporativa",
+  "insuranceServicesHeading5": "Protección Corporativa",
   "insuranceServicesDescription5": "Fornece cobertura abragente contra personas en organizaciones corporativas, empresas, acciones de individuos y personas por diante",
   "choosePlan": "Elige Plan",
 
