--- a/src/translation/pt.json
+++ b/src/translation/pt.json
@@ -51,7 +51,7 @@
   "insuranceServicesHeading4": "Proteção Automática",
   "insuranceServicesDescription4": "Oferece cobertura para seus veículos contra danos causados ​​por acidentes, roubo, vandalismo ou desastres naturais",
 
-  "insuranceServicesHeading5": "proteção corporativa",
+  "insuranceServicesHeading5": "Proteção Corporativa",
   "insuranceServicesDescription5": "Fornece cobertura abrangente contra perdas em organizações corporativas, empresas, ações de indivíduos e assim por diante",
   "choosePlan": "Escolha o plano",
 
