--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -26,7 +26,7 @@
   "learnMoreFirstParagraph": "Contáctenos hoy para hablar con un especialista en seguros y recibir una cotización personalizada.",
   "learnMoreSecondParagraph": "Visite nuestra oficina o comuníquese con nosotros por teléfono o correo electrónico. ¡Esperamos poder servirle!",
 
-  "whatWeDoHeader1": "Le quitamos el trabajo de las manos",
+  "whatWeDoHeader": "Le quitamos el trabajo de las manos",
   "whatWeDoHeading1": "Seguro corporativo",
   "whatWeDodescription1": "Cobertura integral contra pérdidas en acciones de organizaciones corporativas, empresas, individuos, etc.",
 
@@ -68,10 +68,10 @@
   "client4name": "",
   "client5name": "",
 
-  "client1TestimonialDesc": "CCIC-Groups hizo que el seguro fuera muy sencillo, guiándome a través del proceso y asegurando una cobertura integral para mi familia.",
-  "client2TestimonialDesc": "Years with CCIC-Groups, never disappointed. Unmatched dedication to customer satisfaction and finding the perfect insurance solutions",
-  "client3TestimonialDesc": "Recientemente presenté un reclamo ante CCIC-Groups y quedé impresionado por su eficiencia y pronta asistencia durante todo el sencillo proceso.",
-  "client4TestimonialDesc": "CCIC-Groups realmente se preocupa por sus clientes y va más allá para garantizar su satisfacción. No tengo más que experiencias positivas con ellos.",
+  "client1TestimonialDesc": "CCIC-Groups hizo que el seguro fuera muy sencillo, guiándome a través del proceso y asegurando una cobertura integral para mi familia",
+  "client2TestimonialDesc": "Años con CCIC-Groups, nunca decepcionados. Dedicación inigualable a la satisfacción del cliente y a encontrar las soluciones de seguros perfectas",
+  "client3TestimonialDesc": "Recientemente presenté un reclamo ante CCIC-Groups y quedé impresionado por su eficiencia y pronta asistencia durante todo el sencillo proceso",
+  "client4TestimonialDesc": "CCIC-Groups realmente se preocupa por sus clientes y va más allá para garantizar su satisfacción. No tengo más que experiencias positivas con ellos",
   "client5TestimonialDesc": "",
 
   "footerLinkHeader1": "Enlaces rápidos",
