--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -80,7 +80,7 @@
 
   "footer1linkParagraph1": "Testimonials",
   "footer1linkParagraph2": "Services",
-  "footer1linkParagraph3": "Our Team",
+  "footer1linkParagraph3": "Plan",
 
   "footer2linkParagraph1": "Assured legal reimbursement",
   "footer2linkParagraph2": "User Analytics",
