--- a/src/translation/es.json
+++ b/src/translation/es.json
@@ -80,7 +80,7 @@
 
   "footer1linkParagraph1": "Testimonios",
   "footer1linkParagraph2": "Servicios",
-  "footer1linkParagraph3": "Nuestro equipo",
+  "footer1linkParagraph3": "Plan",
 
   "footer2linkParagraph1": "Reembolso legal asegurado",
   "footer2linkParagraph2": "Análisis de usuario",
