--- a/src/translation/pt.json
+++ b/src/translation/pt.json
@@ -80,7 +80,7 @@
 
   "footer1linkParagraph1": "Depoimentos",
   "footer1linkParagraph2": "Serviços",
-  "footer1linkParagraph3": "Nosso time",
+  "footer1linkParagraph3": "Plano",
 
   "footer2linkParagraph1": "Reembolso legal garantido",
   "footer2linkParagraph2": "Análise do usuário",
