--- a/src/translation/pt.json
+++ b/src/translation/pt.json
@@ -23,8 +23,13 @@
   "serviceHomeParagraph": "Viva em segurança",
 
   "learnMoreHeader": "Novo em seguros? Pronto para começar?",
-  "learnMoreFirstParagraph": "Contate-nos hoje para falar com um especialista em seguros e receber um orçamento personalizado.",
-  "learnMoreSecondParagraph": "Visite nosso escritório ou entre em contato conosco por telefone ou e-mail. Estamos ansiosos para servi-lo!",
+  "learnMoreFirstParagraph": "A CCIC oferece o melhor e mais seguro processo de seguros para seus clientes. Obtenha seu seguro analisado e aprovado em minutos com as 3 etapas a seguir.",
+  "learnMoreTitlte1": "Aplicativo",
+  "learnMoreDesc1": "Ao solicitar um seguro, serão feitas perguntas básicas, como nome, data de nascimento, endereço e, muitas vezes, perguntas sobre sua ocupação.",
+  "learnMoreTitlte2": "Análise",
+  "learnMoreDesc2": "Após a inscrição, sua solicitação será analisada e analisada por nossos agentes para melhor entendimento, identificação e possível melhor resultado para sua solicitação. Nota: Nossa análise leva menos de 48 horas para fornecer o melhor resultado",
+  "learnMoreTitlte3": "Finalizar",
+  "learnMoreDesc3": "Finalmente, processando seu seguro",
 
   "whatWeDoHeader": "Tiramos o trabalho das suas mãos",
   "whatWeDoHeading1": "Seguro corporativo",
@@ -87,7 +92,7 @@
   "footer2linkParagraph3": "Suporte Ilimitado",
   "footer2linkParagraph4": "Satisfação do Cliente",
 
-  "footer3linkParagraph1": "+1 252-756-9956 ( Atualmente indisponivel )",
+  "footer3linkParagraph1": "+1 252-756-9956 (Atualmente indisponivel)",
   "footer3linkParagraph2": "ccis-groups@hotmail.com",
   "footer3linkParagraph3": "359 Manchester St A Greenville, NC 27834, United States",
 
